<resources>
    <string name="app_name">CST2335FinalProject</string>
    <string name="action_settings">Settings</string>

    <string name="news_search">News Search</string>
    <string name="news_saved">News Saved</string>
    <string name="news_view_in_browser">Browser</string>
    <string name="news_save">Save</string>
    <string name="news_delete">Delete</string>
    <string name="news_error_toast">Please enter the search topic</string>
    <string name="news_wait">Please wait</string>
    <string name="news_failed_save">Failed to save news</string>
    <string name="news_failed_delete">Failed to delete news</string>
    <string name="news_success_save">Article saved</string>
    <string name="news_success_delete">Article deleted</string>
    <string name="news_hint">Enter the news heading</string>
    <string name="help_to_use">How to use</string>
    <string name="help_ok">OK!</string>
    <string name="news_author">Author</string>
    <string name="news_version">Version 1</string>
    <string name="help_1">In Search screen enter a topic that you wants to search and enter.</string>
    <string name="help_2">Click a news to display detail.</string>
    <string name="help_3">On the detail news screen, click on save to save the article to database or
        click delete button to delete the saved article</string>
    <string name="help_4">Click on save button to saved articles.</string>
    <string name="helpSrir">Help</string>



    //Recipe strings
    <string name="help">This is the Recipe Search Engine by Kiranjeet Kaur. Search and save recipes for Chicken and Lasagna!</string>
    <string name="alert">Choose a dish!</string>
    <string name="chicken">Chicken</string>
    <string name="lasagna">Lasagna</string>
    <string name="snackbar">RECIPE SAVED</string>
    <string name="toast">Recipes deleted</string>
    <string name="recipeTV">Recipe Search Engine</string>
    <string name="recipeHint">Search for a recipe</string>
    <string name="search">Search!</string>
    <string name="save">Save recipes!</string>
    <string name="fav">View saved recipes!</string>
    <string name="delete">Delete recipes</string>
    <string name="wait">Wait</string>
    <string name="currency_from_string">From</string>
    <string name="currency_to_string">To</string>
    <string name="currency_convert_string">Convert</string>
    <string name="currency_amount_hint">Enter amount</string>
    <string name="currency_list">Currency list</string>
    <string name="currency_how_to">Instructions:</string>
    <string name="currency_help_1">Select a base and a foreign currency</string>
    <string name="currency_help_2">In the conversion screen, enter an amount and click convert</string>


    <string name="news_search">News Search</string>
    <string name="news_saved">News Saved</string>
    <string name="news_view_in_browser">Browser</string>
    <string name="news_save">Save</string>
    <string name="news_delete">Delete</string>
    <string name="news_error_toast">Please enter the search topic</string>
    <string name="news_wait">Please wait</string>
    <string name="news_failed_save">Failed to save news</string>
    <string name="news_failed_delete">Failed to delete news</string>
    <string name="news_success_save">Article saved</string>
    <string name="news_success_delete">Article deleted</string>
    <string name="news_hint">Enter the news heading</string>
    <string name="help_to_use">How to use</string>
    <string name="help_ok">OK!</string>
    <string name="news_author">Author</string>
    <string name="news_version">Version 1</string>
    <string name="help_1">In Search screen enter a topic that you wants to search and enter.</string>
    <string name="help_2">Click a news to display detail.</string>
    <string name="help_3">On the detail news screen, click on save to save the article to database or
        click delete button to delete the saved article</string>
    <string name="help_4">Click on save button to saved articles.</string>
    <string name="helpSrir">Help</string>



    //Recipe strings
    <string name="help">This is the Recipe Search Engine by Kiranjeet Kaur. Search and save recipes for Chicken and Lasagna!</string>
    <string name="alert">Choose a dish!</string>
    <string name="chicken">Chicken</string>
    <string name="lasagna">Lasagna</string>
    <string name="snackbar">RECIPE SAVED</string>
    <string name="toast">Recipes deleted</string>
    <string name="recipeTV">Recipe Search Engine</string>
    <string name="recipeHint">Search for a recipe</string>
    <string name="search">Search!</string>
    <string name="save">Save recipes!</string>
    <string name="fav">View saved recipes!</string>
    <string name="delete">Delete recipes</string>

</resources>
